--- a/package.json
+++ b/package.json
@@ -8,9 +8,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ant-design/icons": "^4.6.3",
+    "antd": "^4.16.12",
+    "file-loader": "^6.2.0",
+    "firebase": "^9.6.5",
+    "js-cookie": "^3.0.1",
     "next": "12.0.10",
+    "next-videos": "^1.4.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-player": "^2.9.0",
+    "url-loader": "^4.1.1"
   },
   "devDependencies": {
     "eslint": "8.8.0",
